--- a/style.css
+++ b/style.css
@@ -170,14 +170,6 @@ body {
 		padding: 30px;
 	}
 }
-
-
-
-.footer {
-	height: 400px;
-	background: url('img/footer_bg.jpg') no-repeat;
-	background-size: cover;
-}
 .footer img {
 	margin: 100px 0 0 100px;
 }	
@@ -189,7 +181,7 @@ body {
 	display: inline-block;
 }
 .footer ul li a {
-	color: #fff;
+	color: #000000;
 	font-size: 18pt;
 	padding-left: 30px;
 	padding-right: 30px;
